feat: add new GC flag combinations to BenchmarkPlan; update tests for new configurations and parsing logic